fix(route-list-item): now endpoint overflows with ellipsis

--- a/src/app/pages/projects/pages/routes/components/route-list-item/route-list-item.component.scss
+++ b/src/app/pages/projects/pages/routes/components/route-list-item/route-list-item.component.scss
@@ -27,6 +27,12 @@
     margin-bottom: 0;
   }
 
+  & > p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 52px;
+  }
+
   &__placeholder {
     height: 77px;
     background-color: lightgray;
